// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Style Presets 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Primary
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              The primary button.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#5D2555",
                  "borderRadius": 4,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Helvetica",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 2,
                  }
                }
              >
                Click It
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Disabled
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              The disabled behaviour of the primary button.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#5D2555",
                  "borderRadius": 4,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Helvetica",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 2,
                  }
                }
              >
                Click It
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Array Style
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Button with array style
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#5D2555",
                  "borderRadius": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 100,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Helvetica",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 2,
                  }
                }
              >
                Click It
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots GradientBackground Style Presets 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                default/stretch
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Full screen background gradient.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <ViewManagerAdapter_ExpoLinearGradient
              proxiedProperties={
                Object {
                  "colors": Array [
                    4282524739,
                    4280818484,
                  ],
                  "endPoint": undefined,
                  "locations": undefined,
                  "startPoint": undefined,
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Header Behavior 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                default
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              The default usage
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 2,
                    "borderColor": "#1d1d1d",
                    "borderStyle": "solid",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "paddingBottom": 24,
                    "paddingHorizontal": 16,
                    "paddingTop": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": 32,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    Header
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": 32,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                leftIcon
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              A left nav icon
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 2,
                    "borderColor": "#1d1d1d",
                    "borderStyle": "solid",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "paddingBottom": 24,
                    "paddingHorizontal": 16,
                    "paddingTop": 24,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#5D2555",
                      "borderRadius": 4,
                      "justifyContent": "center",
                      "opacity": 1,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "Helvetica",
                        "fontSize": 13,
                        "fontWeight": "bold",
                        "letterSpacing": 2,
                      }
                    }
                  >
                    Back
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    Header
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": 32,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                rightIcon
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              A right nav icon
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#1d1d1d",
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 2,
                    "borderColor": "#1d1d1d",
                    "borderStyle": "solid",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "paddingBottom": 24,
                    "paddingHorizontal": 16,
                    "paddingTop": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": 32,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    Header
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#5D2555",
                      "borderRadius": 4,
                      "justifyContent": "center",
                      "opacity": 1,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "Helvetica",
                        "fontSize": 13,
                        "fontWeight": "bold",
                        "letterSpacing": 2,
                      }
                    }
                  >
                    Continue
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
